maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: not found: value x
    x = getX()
    ^JediEscaper:20: error: not found: value y
    y = getY()
    ^JediEscaper:21: error: not found: value y
    if (y!=0 && !aMurNord(x,y)){
        ^JediEscaper:21: error: not found: value x
    if (y!=0 && !aMurNord(x,y)){
                          ^JediEscaper:21: error: not found: value y
    if (y!=0 && !aMurNord(x,y)){
                            ^JediEscaper:22: error: not found: value x
      nord = getIndication(x,y-1)
                           ^JediEscaper:22: error: not found: value y
      nord = getIndication(x,y-1)
                             ^JediEscaper:24: error: not found: value x
    if(x!=0 && !aMurOuest(x,y)){
       ^JediEscaper:24: error: not found: value x
    if(x!=0 && !aMurOuest(x,y)){
                          ^JediEscaper:24: error: not found: value y
    if(x!=0 && !aMurOuest(x,y)){
                            ^JediEscaper:25: error: not found: value x
      ouest = getIndication(x-1,y)
                            ^JediEscaper:25: error: not found: value y
      ouest = getIndication(x-1,y)
                                ^JediEscaper:27: error: not found: value y
    if(y!=getMondeHauteur()-1 && !aMurNord(x,y+1)){
       ^JediEscaper:27: error: not found: value x
    if(y!=getMondeHauteur()-1 && !aMurNord(x,y+1)){
                                           ^JediEscaper:27: error: not found: value y
    if(y!=getMondeHauteur()-1 && !aMurNord(x,y+1)){
                                             ^JediEscaper:28: error: not found: value x
      sud = getIndication(x,y+1)
                          ^JediEscaper:28: error: not found: value y
      sud = getIndication(x,y+1)
                            ^JediEscaper:30: error: not found: value x
    if(x!=getMondeLargeur()-1 && !aMurOuest(x+1,y)){
       ^JediEscaper:30: error: not found: value x
    if(x!=getMondeLargeur()-1 && !aMurOuest(x+1,y)){
                                            ^JediEscaper:30: error: not found: value y
    if(x!=getMondeLargeur()-1 && !aMurOuest(x+1,y)){
                                                ^JediEscaper:31: error: not found: value x
      est = getIndication(x+1,y)
                          ^JediEscaper:31: error: not found: value y
      est = getIndication(x+1,y)
                              ^JediEscaper:33: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int, Int)
    if (nord == Math.min(nord,sud,est,ouest)){
                     ^JediEscaper:34: error: value Nord is not a member of object plm.universe.Direction
      setDirection(Direction.Nord)
                             ^JediEscaper:36: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int)
    }else if (sud == Math.min(sud,est,ouest)){
                          ^JediEscaper:37: error: value Sud is not a member of object plm.universe.Direction
      setDirection(Direction.Sud)
                             ^JediEscaper:40: error: value Est is not a member of object plm.universe.Direction
      setDirection(Direction.Est)
                             ^JediEscaper:43: error: value Ouest is not a member of object plm.universe.Direction
      setDirection(Direction.Ouest)
                             ^